fixed home page spacing

--- a/src/components/footer.css
+++ b/src/components/footer.css
@@ -67,11 +67,11 @@
 @media (max-width: 760px) {
   .copyright{
     padding: 0;
+    text-align: center;
   }
 
   .footerNav{
     flex-direction: column;
-    padding: 0;
   }
 
   .pages{
@@ -80,6 +80,7 @@
     margin-top: 15px;
     display: block;
   }
+
 
   .mr-auto{
     justify-content: center;
