--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -14,6 +14,7 @@
   z-index: 1;
   text-align: left;
   color: #fff;
+  padding: 1rem;
 }
 
 .hero-content h2 {
@@ -244,7 +245,7 @@
 .stat-item strong {
   font-weight: bold;
   color: #9CE2D3;
-  font-size: 2em;
+  font-size: 1.5em;
 }
 
 .stat-item span {
@@ -261,6 +262,7 @@
   text-align: left;
   font-weight: bold;
   margin-left: 5em;
+  margin-bottom: 1.5rem;
 }
 
 .testimony-container {
@@ -292,6 +294,7 @@
     position: relative;
     height: 400px;
     overflow: hidden;
+    margin-top: -20px;
   }
 
   .mission-image {
@@ -302,7 +305,7 @@
 
   .hero-content {
     position: absolute;
-    top: 50%;
+    top: 53%;
     left: 35%;
     transform: translate(-50%,  -50%);
     z-index: 1;
@@ -313,6 +316,10 @@
 
   .hero-content h2 {
     font-size: 1.5rem;
+  }
+
+  .hero-content p{
+    font-size: 0.9rem;
   }
 
   .semout-content {
@@ -334,6 +341,7 @@
     color: black;
     background-color: #9CE2D3;
     border-color: #9CE2D3;
+    margin: 1em 2em 0.5em 2em;
     margin-bottom: 2em;
     margin-left: 1em;
     width: 90%;
@@ -424,7 +432,7 @@
   }
 
   .arrow-img{
-    margin-bottom: 1em;
+    margin: 0.2rem 0 0.4rem 0 ;
   }
 
   .button-description {
@@ -433,7 +441,7 @@
   }
 
   .button-name {
-    font-size: 19px;
+    font-size: 18px;
     text-align: left;
   }
 
@@ -444,5 +452,10 @@
   .home-container {
     padding-bottom: 0px;
   }
+
+  .stat-item span {
+    font-size:12px;
+  }
+  
 
 }
